<resources>
    <string name="app_name">DengueApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Splash -->
    <string name="empresa">https://minsa.gob.pe/</string>

    <!-- Login -->
    <string name="escriba_usuario">Escriba su nombre de usuario</string>
    <string name="escriba_clave">Escriba su contraseña</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="pie1">Todos los derechos reservados</string>

    <!-- Menu izquierdo-->
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="acercade">Acerca de</string>

    <!-- Menu Principal-->
    <string name="menu_home">Registrar Paciente</string>
    <string name="menu_gallery">Agendar Visita</string>
    <string name="menu_slideshow">Reporte de Visitas</string>
    <string name="menu_csalud">Centros de Salud</string>
    <string name="menu_medico">Registro de Médicos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sptipodoc">
        <item>DNI</item>
        <item>C.EXT</item>
    </string-array>

</resources>