<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.minsa.dengue.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.minsa.dengue.ui.csalud.AgendarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_agendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.minsa.dengue.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_csalud"
        android:name="com.minsa.dengue.ui.csalud.CsaludFragment"
        android:label="@string/menu_csalud"
        tools:layout="@layout/fragment_csalud" />

    <fragment
        android:id="@+id/nav_medico"
        android:name="com.minsa.dengue.ui.medico.MedicoFragment"
        android:label="@string/menu_medico"
        tools:layout="@layout/fragment_medico" />

    <fragment
        android:id="@+id/nav_listamedico"
        android:name="com.minsa.dengue.ui.medico.ListarMedicoFragment"
        android:label="@string/menu_medico"
        tools:layout="@layout/fragment_listar_medico">
        <action
            android:id="@+id/action_nav_listamedico_to_nav_medico"
            app:destination="@id/nav_medico">
            <argument
                android:name="idTabla"
                app:argType="string" />
            <argument
                android:name="nombres"
                app:argType="string" />
            <argument
                android:name="apellidos"
                app:argType="string" />
            <argument
                android:name="idTipDoc"
                app:argType="string" />
            <argument
                android:name="nroDocumento"
                app:argType="string" />
            <argument
                android:name="especialidad"
                app:argType="string" />
            <argument
                android:name="telefono"
                app:argType="string" />
            <argument
                android:name="correo"
                app:argType="string" />
            <argument
                android:name="foto"
                app:argType="string" />
            <argument
                android:name="tipoAccion"
                app:argType="string" />
            <argument
                android:name="userAccion"
                app:argType="string" />

        </action>
    </fragment>
    <fragment
        android:id="@+id/OpVisitaAdd"
        android:name="com.minsa.dengue.ui.gallery.VisitaFragment"
        android:label="fragment_visita"
        tools:layout="@layout/fragment_visita" />
</navigation>